# Artoolkit-cars-sample-with-CMAKE

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle  fabric.properties
app/src/androidTest/java/ar/arsimplecarsnew/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/Data/: pinky.patt
app/src/main/assets/Data/models/: M01-Pink-Low-15.mtl
app/src/main/cpp/: ARWrapperNativeCarsExample.cpp
app/src/main/java/ar/arsimplecarsnew/: ARSimpleNativeCarsApplication.java  MainActivity.java  SimpleNativeRenderer.java
app/src/main/res/layout/: activity_main.xml  main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/ar/arsimplecarsnew/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
